# TermFishing

./: .release-plz.toml  CHANGELOG.md  Cargo.toml
.github/workflows/: cd.yml  ci.yml  release-plz.yaml  release.yml
src/: app.rs  chat.rs  event.rs  inventory.rs  items.rs  main.rs  player.rs  ui.rs
src/inventory/: backpack.rs  dex.rs
src/items/: fish.rs  rod.json  rod.rs  species.json
