[package]
name = "rust_networking"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
futures = "0.3.32"
libp2p = { version = "0.56.0", features = ["noise", "ping", "tcp", "tokio", "yamux", "mdns", "quic", "macros", "gossipsub"] }
ratatui = "0.30.0"
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
