[package]
name = "rust_networking"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.32"
libp2p = { version = "0.56.0", features = ["noise", "ping", "tcp", "tokio", "yamux", "mdns", "quic", "macros", "gossipsub"] }
rand = "0.10.0"
rand_distr = "0.6.0"
ratatui = "0.30.0"
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strum = { version = "0.28.0", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tui-input = "0.15.0"
